添加核心计算类